--- a/design_cafe/CSS/style.css
+++ b/design_cafe/CSS/style.css
@@ -31,6 +31,7 @@
 }
 .contents{
      max-width: 1000px;
+     padding: 0 10px;
      margin: 0 auto;
 }
 
@@ -172,6 +173,7 @@ padding-bottom: 50px;
     } 
     .news li{
         line-height: 2rem;
+        font-size: 22px;
     } 
     .news span{
         text-decoration:underline;
@@ -202,14 +204,15 @@ padding-bottom: 50px;
 
     .footer_container {
         max-width: 1000px;
-        padding: 85px;
+        padding: 0 10px;
         margin: 0 auto;
 
 
     }
 
      .footer_info{
-        display: flex;       
+        display: flex;
+        padding: 85px;       
         }
 
     .footer_logo{
@@ -235,8 +238,8 @@ padding-bottom: 50px;
     .c-backToTop {
         z-index: 100;
         position: fixed;
-        right: 100px;
-        bottom: 230px;
+        right: 20px;
+        bottom: 20px;
         width: 125px;
         height: 125px;
         border-radius: 50%;
