--- a/design_cafe/CSS/style.css
+++ b/design_cafe/CSS/style.css
@@ -1,260 +1,592 @@
 @charset "utf-8";
-.main{
-    background-color: #E8D9BF;
+.main {
+  background-color: #e8d9bf;
 }
-.header_contents{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /*55/1920=0.2864・・・*/
-    padding-left: 2.8%;
-    /*150/1920=0.78・・・*/
-    padding-right: 7.8%;
+.header_contents {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /*55/1920=0.2864・・・*/
+  padding-left: 2.8%;
+  /*150/1920=0.78・・・*/
+  padding-right: 7.8%;
+  position: absolute;
+  width: 100%;
+}
+
+.header_nav ul {
+  display: flex;
+  gap: 74px;
+}
+
+.header_nav li {
+  color: #fff;
+  font-weight: bold;
+  font-family: "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium",
+    "游ゴシック", "Yu Gothic", sans-serif;
+}
+
+.logo {
+  width: 226px;
+}
+.contents {
+  max-width: 1000px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+
+.hamburger,
+.header_nav-sp{
+    display: none;
+}
+
+@media screen and (max-width: 1100px) {
+  .header_nav {
+    display: none;
+  }
+  .hamburger{
+    display: block;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    z-index: 9999;
+  }
+  .hamburger span{
+    width: 30px;
+    height: 2px;
+    background-color: #fff;
+    position: absolute;
+    content: "";
+    top: 13px;
+    transition: .3s;
+  }
+/* hamメニュー（擬似要素） */
+.hamburger span::before{
+    width: 30px;
+    height: 2px;
+    background-color: #fff;
+    position: absolute;
+    content: "";
+    top: -13px;
+    transition: .3s;
+
+  }
+  .hamburger span::after{
+    width: 30px;
+    height: 2px;
+    background-color: #fff;
+    position: absolute;
+    content: "";
+    bottom: -13px;
+    transition: .3s;
+
+  }
+
+.open span{
+    background: transparent;
+}
+
+.open span::before{
+    transform: rotate(45deg);
+    top: 0;
+}
+.open span::after{
+    transform: rotate(-45deg);
+    bottom: 0;
+}
+
+
+/* hamメニューが押されてnavが開いた時のCSS */
+
+.header_nav-sp{
     position: absolute;
     width: 100%;
-   
+    height: 100vh;
+    background-color: #0000006c;
 }
 
-.header_nav ul{
+.header_nav-sp ul{
     display: flex;
-    gap: 74px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    height: 100%;
 }
 
-.header_nav li{
+.header_nav-sp li{
     color: #fff;
-    font-weight: bold;
-    font-family: "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", sans-serif;
+   font-weight: bold;
+   font-family: "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", sans-serif;
 }
 
-.logo{
-    width: 226px;
+
 }
-.contents{
-     max-width: 1000px;
-     padding: 0 10px;
-     margin: 0 auto;
-}
+
 
 
 /* first */
-.first{
-    padding-top: 107px;
-    padding-bottom: 50px;
-    text-align: center;
+.first {
+  padding-top: 107px;
+  padding-bottom: 50px;
+  text-align: center;
 }
 
 .first_text1 {
-    font-size: 30px;
-    padding-bottom: 60px;
+  font-size: 30px;
+  padding-bottom: 60px;
 }
 .first_text2 {
-    font-size: 82px;
-    line-height: 1.17;
-    padding-bottom: 60px;
+  font-size: 82px;
+  line-height: 1.17;
+  padding-bottom: 60px;
 }
 .first_text3 {
-    font-size: 23px;
-    line-height: 1.65;
+  font-size: 23px;
+  line-height: 1.65;
 }
+
+@media screen and (max-width: 1024px) {
+  /* first */
+  .first_text1 {
+    font-size: 17px;
+  }
+  .first_text2 {
+    font-size: 65px;
+  }
+  .first_text3 {
+    font-size: 16px;
+  }
+  
+  }
 
 /* about_us */
 
-.about_us{
-    display: flex;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    align-items: center;
+.about_title_sp {
+display: none;
 }
 
-.about_title{
-    width: 272px;
- }
-
-.about_contents{
-    width: 50%;
-    margin: 0;
-    padding-left: 85px;
+.about_us {
+  display: flex;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  align-items: center;
 }
 
-.about_text1{
-    font-size: 44px;
-    line-height: 1.38;
-    padding-top: 60px;
-    padding-bottom: 38px;
+.about_title {
+  width: 272px;
 }
 
-.about_text2{
-    font-size:  16px;
-    line-height: 1.62;
+
+.about_contents {
+  width: 50%;
+  margin: 0;
+  padding-left: 85px;
+}
+
+.about_text1 {
+  font-size: 44px;
+  line-height: 1.38;
+  padding-top: 60px;
+  padding-bottom: 38px;
+}
+
+.about_text2 {
+  font-size: 16px;
+  line-height: 1.62;
 }
 
 .about_img img {
-    border-radius: 0 0 60px 0;
+  border-radius: 0 0 60px 0;
+}
+
+
+
+@media screen and (max-width: 1024px) {
+  /* about */
+  .about_text1 {
+    font-size: 30px;
+  }
+  .about_text2 {
+    font-size: 12px;
+  }
+  }
+  
+
+/* menu */
+.menu {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.menu_contents {
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu_box {
+  width: 30%;
+}
+
+.menu_title {
+  width: 151px;
+  margin: 0 auto;
+  padding-bottom: 48px;
+}
+.menu_box h3 {
+  margin-top: -20px;
+  padding-left: 20px;
+  font-size: 38px;
+  color: #d30202;
+}
+
+.menu_box p {
+  padding-top: 20px;
+  font-size: 17px;
+  line-height: 1.47;
+}
+
+.menu_box img {
+  border-radius: 0 60px 0 0;
+}
+
+/* gallery */
+.gallery {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.gallery_title {
+  width: 245px;
+  margin: 0 auto;
+  padding-bottom: 25px;
+}
+
+.slider_g {
+  margin: 0 calc(50% - 50vw);
+  width: 100vw;
+}
+
+.gallery_sp{
+  display: none;
+}
+
+
+  
+
+/* event */
+.event {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.event_title {
+  width: 173px;
+  margin: 0 auto;
+  padding-bottom: 25px;
+}
+
+.news {
+  padding: 20px;
+  margin: 0 auto;
+  font-weight: bold;
+  background-color: #fff;
+  border: solid 3px #4f260b;
+}
+.news li {
+  max-width: 650px;
+  margin: 0 auto;
+  line-height: 2rem;
+  font-size: 22px;
+}
+.news span {
+  text-decoration: underline;
+  padding-left: 60px;
+}
+
+
+.br-sp {
+  display: none;
+}
+
+
+/* access */
+
+.access {
+  padding-top: 50px;
+}
+
+.access_title {
+  width: 213px;
+  margin: 0 auto;
+  padding-bottom: 25px;
+}
+
+.google_map {
+  margin: 0 calc(50% - 50vw);
+  filter: grayscale(100%) invert(92%) contrast(83%);
+}
+
+/* fotter */
+
+.footer_container {
+  max-width: 1000px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+
+.footer_info {
+  display: flex;
+  padding: 85px;
+}
+
+.footer_logo {
+  width: 226px;
+  margin-top: 5px;
+  padding-right: 70px;
+}
+
+.info li {
+  font-size: 20px;
+  line-height: 1.95;
+}
+
+.copy {
+  font-size: 16px;
+  text-align: center;
+  padding-bottom: 85px;
+}
+
+/* button */
+
+.c-backToTop {
+  z-index: 100;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  width: 125px;
+  height: 125px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.c-backToTop a:before {
+  position: absolute;
+  width: 125px;
+  height: 125px;
+  transform: translate(-50%, -50%);
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  content: "";
+  top: 50%;
+  left: 50%;
+  display: inline-block;
+}
+
+
+
+
+@media screen and (max-width: 767px) {
+
+  .contents {
+    padding: 0;
+  }
+
+/* first */
+.first {
+  padding-top: 40px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+
+.first_text1 {
+  font-size: 2.21vw;
+  padding-bottom: 30px;
+}
+.first_text2 {
+  font-size: 4.95vw;
+  line-height: 1.8;
+  padding-bottom: 30px;
+}
+.first_text3 {
+  font-size:2.08vw;
+  line-height: 1.87;
+}
+
+
+/* about_us */
+
+.about_us {
+  display: block;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  align-items: center;
+}
+
+.about_title_sp{
+  width: 160px;
+  display: block;
+  margin: 0 auto;
+  padding-bottom: 20px;
+}
+
+.about_title {
+  display: none;
+}
+
+
+.about_contents {
+  width: 100%;
+  margin: 0;
+  padding: 0 20px;
+}
+
+.about_text1 {
+  font-size: 4.69vw;
+  line-height: 1.25;
+  padding-top: 37px;
+  padding-bottom: 30px;
+}
+
+.about_img img {
+  border-radius: 0;
 }
 
 /* menu */
-.menu{
-padding-top: 50px;
-padding-bottom: 50px;
-}
-
-.menu_contents{
-display: flex;
-justify-content: space-between;
+.menu_contents {
+  display:flex;
+  flex-flow: column;
 }
 
 .menu_box{
-    width: 30%;
+  padding:20px 37px 0;
+  margin:0 auto;
+  width:100%;
 }
 
-.menu_title{
-   width: 151px;
-   margin: 0 auto;
-   padding-bottom: 48px;
+
+.menu_title {
+  width: 87px;
+  display: block;
+  margin: 0 auto;
+  padding-bottom: 20px;
 }
-.menu_box h3{
-    margin-top: -20px;
-    padding-left: 20px;
-    font-size: 38px;
-    color: #D30202;
-
-}
-
-.menu_box p{
-    padding-top: 20px;
-    font-size: 17px;
-   line-height: 1.47;
-
+.menu_box h3 {
+  margin-top: -20px;
+  font-size: 40px;
+  color: #d30202;
 }
 
-.menu_box img{
-    border-radius: 0 60px 0 0;
+.menu_box p {
+  padding-top: 20px;
+  font-size: 2.21vw;
+  line-height: 1.47;
+}
+
+.menu_box img {
+  border-radius: 0 60px 0 0;
 }
 
 
 /* gallery */
-.gallery{
-padding-top: 50px;
-padding-bottom: 50px;
-}
-
-
-.gallery_title{
- width: 245px;
- margin: 0 auto;
- padding-bottom: 25px;
-}
-
 .slider_g{
-    margin: 0 calc(50% - 50vw);
-    width: 100vw;
+  display: none;
 }
+
+.gallery_title {
+  width: 142px;
+  margin: 0 auto;
+  padding-bottom: 25px;
+}
+
+.gallery_sp{
+  display: block;
+}
+
 
 
 /* event */
-.event{
-    padding-top: 50px;
-    padding-bottom: 50px;
-    }
-    
-    
-    .gevent_title{
-     width: 173px;
-     margin: 0 auto;
-     padding-bottom: 25px;
-    }
-    
-    .news{
-        padding: 20px 160px;
-        margin: 0 auto;
-        font-weight: bold;
-        background-color: #fff;
-        border: solid 3px #4F260B;
-    } 
-    .news li{
-        line-height: 2rem;
-        font-size: 22px;
-    } 
-    .news span{
-        text-decoration:underline;
-        padding-left: 60px;
-    }
+.event_title {
+  width: 100px;
+  margin: 0 auto;
+  padding-bottom: 25px;
+}
+
+.news {
+  padding: 20px;
+  margin: 0 20px;
+  font-weight: bold;
+  background-color: #fff;
+  border: solid 3px #4f260b;
+}
 
 
-    /* access */
+.news li {
+  margin: 0 auto;
+  line-height: 1.3rem;
+  font-size: 2.08vw;
+  padding: 10px 0;
+}
 
-    .access{
-        padding-top: 50px;
-        }
-        
-        
-        .access_title{
-         width: 213px;
-         margin: 0 auto;
-         padding-bottom: 25px;
-        }
-    
-        .google_map{
-            margin: 0 calc(50% - 50vw);
-            filter: grayscale(100%) invert(92%) contrast(83%);
-        }
+.news span {
+  text-decoration: underline;
+  padding: 0;
+}
 
+.br-sp {
+  display: block;
+}
 
-    /* access */
+/* access */
+.access_title {
+  width: 124px;
+  margin: 0 auto;
+  padding-bottom: 25px;
+}
 
-    .footer_container {
-        max-width: 1000px;
-        padding: 0 10px;
-        margin: 0 auto;
+/* footer */
+.footer_info {
+  display:flex;
+  flex-flow: column;
+}
 
+.info li {
+  font-size: 2.6vw;
+  line-height: 1.95;
+}
 
-    }
+.footer_logo {
+  width: 226px;
+  margin-bottom: 35px;
+  padding-right: 0;
+  
+}
 
-     .footer_info{
-        display: flex;
-        padding: 85px;       
-        }
+/* button */
 
-    .footer_logo{
-        width: 226px;
-        margin-top: 5px;
-        padding-right: 70px;
+.c-backToTop {
+  z-index: 100;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  cursor: pointer;
+}
 
-    }
+.c-backToTop a:before {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  transform: translate(-50%, -50%);
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  content: "";
+  top: 50%;
+  left: 50%;
+  display: inline-block;
+}
 
-    .info li{
-        font-size: 20px;
-        line-height: 1.95;
-    }
-
-    .copy{
-        font-size: 16px;
-        text-align: center;
-        padding-bottom: 85px;
-    }
-
-      /* button */
-
-    .c-backToTop {
-        z-index: 100;
-        position: fixed;
-        right: 20px;
-        bottom: 20px;
-        width: 125px;
-        height: 125px;
-        border-radius: 50%;
-        cursor: pointer;
-      }
-      
-      
-      .c-backToTop a:before {
-        position: absolute;
-        width: 125px;
-        height: 125px;
-        transform: translate(-50%, -50%);
-        clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-        content: "";
-        top: 50%;
-        left: 50%;
-        display: inline-block;
-      }
+}
